syntax = "proto3";

package auth_center.v1.auth;

import "google/api/annotations.proto";

option go_package = "iwut-auth_center/api/auth_center/v1/auth;auth";

service Auth {

  rpc passwordLogin (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }

  rpc getRegisterMail (GetVerifyCodeRequest) returns (GetVerifyCodeReply) {
    option (google.api.http) = {
      get: "/auth/get-register-mail"
    };
  }

  rpc register (RegisterRequest) returns (RegisterReply) {
    option (google.api.http) = {
      post: "/auth/register"
      body: "*"
    };
  }

  rpc refreshToken (RefreshTokenRequest) returns (RefreshTokenReply) {
    option (google.api.http) = {
      post: "/auth/refresh-token"
      body: "*"
    };
  }
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  message LoginReplyData {
    string accessToken = 1;
    string refreshToken = 2;
  }
  int32 code = 1;
  string message = 2;
  optional LoginReplyData data = 3;
  string traceId = 4;
}

message GetVerifyCodeRequest {
  string email = 1;
}

message GetVerifyCodeReply {
  int32 code = 1;
  string message = 2;
  string traceId = 3;
}

message RegisterRequest {
  string email = 1;
  string verifyCode = 2;
  string password = 3;
}

message RegisterReply {
  message RegisterReplyData {
    string userId = 1;
  }
  int32 code = 1;
  string message = 2;
  optional RegisterReplyData data = 3;
  string traceId = 4;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenReply {
  message RefreshTokenReplyData {
    string accessToken = 1;
    string refreshToken = 2;
  }
  int32 code = 1;
  string message = 2;
  optional RefreshTokenReplyData data = 3;
  string traceId = 4;
}