syntax = "proto3";

package auth_center.v1.oauth2;

import "google/api/annotations.proto";

option go_package = "iwut-auth_center/api/auth_center/v1/oauth2;oauth2";

service OAuth2 {
  rpc authorize (AuthorizeRequest) returns (AuthorizeReply) {
    option (google.api.http) = {
      get: "/oauth2/authorize"
    };
  }
}

message AuthorizeRequest {
  string response_type = 1;
  string client_id = 2;
  string redirect_uri = 3;
  string scope = 4;
  string state = 5;
}
message AuthorizeReply {
  message AuthorizeReplyData {
    string authorization_code = 1;
    string redirect_uri = 2;
    string state = 3;
  }
  int32 code = 1;
  string message = 2;
  optional AuthorizeReplyData data = 3;
  optional string trace_id = 4;
}